<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:textAppearance="?android:attr/textAppearanceListItemSmall">

    <ImageView
        android:id="@+id/tvImgNews"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/empty" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvJudul"
            android:justificationMode="inter_word"
            android:layout_width="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textSize="16sp"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tvDescription"
            android:justificationMode="inter_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contoh_deskripsi"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textSize="12sp"
            tools:targetApi="o" />
    </LinearLayout>
</LinearLayout>
